# fatebound

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cheonmyeong/: pyproject.toml
cheonmyeong/cheonmyeong/: app.py  theme.py
cheonmyeong/cheonmyeong/data/: slice_pack.py
cheonmyeong/cheonmyeong/engine/: combat.py  render.py  state.py  worldmap.py
cheonmyeong/cheonmyeong/screens/: cards.py  extras.py  journal.py  map.py  opening.py  stage.py  study.py
cheonmyeong/tests/: test_slice.py
docs/: ENGINEERING.md
game/: README.md  _entry.py  pyproject.toml
game/fatebound/: __init__.py  cli.py
game/fatebound/content/: __init__.py
game/fatebound/content/data/: events.json  items.json  monsters.json  zones.json
game/fatebound/engine/: bag.py  balance.py  combat.py  combat_m1.py  events.py  formula.py  m1_layout.py  models.py  render_text.py  rng.py  runmap.py  session.py
game/fatebound/persistence/: __init__.py
game/fatebound/tui/: __init__.py  app.py  app.tcss  buildinfo.py  commands.py
game/fatebound/tui/screens/: __init__.py  buildselect.py  coldopen.py  event.py  game.py  help.py  inn.py  inventory.py  map.py  reincarnate.py  title.py
game/fatebound/tui/widgets/: __init__.py  dice.py  dice3d.py  gugung.py  reserve.py  statuspanel.py
game/tests/: test_archetype_diversity.py  test_balance.py  test_crit_m1.py  test_dice_build.py  test_dice_keystone.py  test_endless.py  test_engine.py  test_guard_m1.py  test_onboarding.py  test_persistence.py  test_properties.py  test_snapshots.py  test_tui_combat.py
game/tests/__snapshots__/test_snapshots/: test_snapshot_buildselect.raw  test_snapshot_dice_select.raw  test_snapshot_game_placement.raw
