[project]
name = "cheonmyeong"
version = "0.1.0"
description = "천명회귀 — 회귀한 여고수의 방치 무협 (수직 슬라이스)"
requires-python = ">=3.12"
dependencies = ["textual>=0.80"]

[project.scripts]
cheonmyeong = "cheonmyeong.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cheonmyeong"]
