[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fatebound"
version = "0.1.0"
description = "천명회귀 · Fatebound — 무협 회귀 로그라이트 오토배틀러 (터미널 TUI)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mirlim" }]
keywords = ["game", "roguelike", "tui", "textual", "wuxia", "autobattler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
]
dependencies = ["textual>=8", "rich>=14", "wcwidth>=0.8.1"]

[project.urls]
Homepage = "https://github.com/bborok1234/fatebound"
Repository = "https://github.com/bborok1234/fatebound"

[project.scripts]
fatebound = "fatebound.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pyinstaller>=6.21.0", "hypothesis>=6", "ruff>=0.15.17", "import-linter>=2", "pytest-textual-snapshot>=1.1.0"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# 시작은 관대 — 실제 버그(pyflakes F·구문 E9·버그류 B)만. 스타일은 점진 강화.
select = ["E9", "F", "B"]
ignore = ["B008", "B905", "F841"]

# 아키텍처 가드 — 엔진/콘텐츠/세이브는 헤드리스 유지(= RSI verifier·테스트 가능성). 에이전트가 레이어 침식 못 하게.
[tool.importlinter]
root_package = "fatebound"

[[tool.importlinter.contracts]]
name = "core(engine·content·persistence)는 tui에 의존하지 않는다"
type = "forbidden"
source_modules = ["fatebound.engine", "fatebound.content", "fatebound.persistence"]
forbidden_modules = ["fatebound.tui"]

[tool.hatch.build.targets.wheel]
packages = ["fatebound"]

# 패키지 내 데이터(content/data/*.json, tui/*.tcss)는 hatchling이 기본 포함

[tool.pytest.ini_options]
testpaths = ["tests"]
